@@ -163,7 +163,7 @@ acucobol-literals:			unconformable
 word-continuation:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
-rename-01-and-77:			ok
+renames-uncommon-levels:		ok
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
