@@ -159,7 +159,7 @@ acucobol-literals:			ok
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
-rename-01-and-77:			ok
+renames-uncommon-levels:		ok
 
 # If yes, all the reserved words must be specified in a list of reserved:
 # entries; the default reserved word list will not be used.
