@@ -1,7 +1,7 @@
 
 2016-07-27  Edward Hart <edward.dan.hart@gmail.com>
 
-	* general: added rename-01-and-77 configuration option.
+	* general: added renames-uncommon-levels configuration option.
 
 2016-07-18  Edward Hart <edward.dan.hart@gmail.com>
 
